Spring boot 404 handling example Circuitbreaker removal Modules refactoring